# steganography

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: on_push_and_pull_request.yaml
docs/steganography/: steganography.md
docs/templates/: text.mako
examples/: encode_and_decode.py
steganography/: __init__.py  main.py  steganography.py
steganography/tests/unit/: conftest.py
steganography/tests/unit/steganography/: test_steganography.py
tests/unit/: conftest.py  test_steganography.py
tests/unit/steganography/: test_steganography.py
